--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ button:disabled {
 
 .option-button {
     display: block;
-    margin: 5px;
+    margin: 15px;
+    height: 30px;
     width: 100%;
 }
 
