--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ button:disabled {
 
 .option-button {
     display: block;
-    margin: 15px;
-    height: 30px;
-    width: 100%;
+    margin: 25px;
+    height: 45px;
+    width: 50px;
 }
 
 .button-container {
